; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/krb5/extr_test_time.c_main.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/krb5/extr_test_time.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [21 x i8] c"krb5_init_context %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = call i64 @krb5_init_context(i32* %6)
  store i64 %8, i64* %7, align 8
  %9 = load i64, i64* %7, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i64, i64* %7, align 8
  %13 = call i32 @errx(i32 1, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i64 %12)
  br label %14

14:                                               ; preds = %11, %2
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @check_set_time(i32 %15)
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @check_set_time(i32 %17)
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @check_set_time(i32 %19)
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @check_set_time(i32 %21)
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @check_set_time(i32 %23)
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @krb5_free_context(i32 %25)
  ret i32 0
}

declare dso_local i64 @krb5_init_context(i32*) #1

declare dso_local i32 @errx(i32, i8*, i64) #1

declare dso_local i32 @check_set_time(i32) #1

declare dso_local i32 @krb5_free_context(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
